[gd_scene load_steps=2 format=3 uid="uid://sl88vb0pd3uh"]

[ext_resource type="Script" path="res://GameObjectScripts/FamilyMemberEvent.gd" id="1_i6o2h"]

[node name="FamilyMemberEvent" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -896.0
offset_bottom = -515.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i6o2h")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 258.0
offset_bottom = 133.0

[node name="NoticeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 9.0
offset_right = 249.0
offset_bottom = 90.0
autowrap_mode = 2

[node name="PlacateButton" type="Button" parent="."]
layout_mode = 0
offset_left = 46.0
offset_top = 97.0
offset_right = 101.0
offset_bottom = 121.0
text = "Placate"

[node name="DenyButton" type="Button" parent="."]
layout_mode = 0
offset_left = 131.0
offset_top = 98.0
offset_right = 193.0
offset_bottom = 128.0
text = "Deny"

[connection signal="pressed" from="PlacateButton" to="." method="_on_placate_button_pressed"]
[connection signal="pressed" from="DenyButton" to="." method="_on_deny_button_pressed"]
